tests/paczka1/small_fuzzy/32983052.err
Error in line 2: GjOo S317 6,1
Error in line 5: S655 S391 45,58
